# spotpear

./: .gitignore  README.md
apps/display_image/: CMakeLists.txt  README.md  sdkconfig.defaults
apps/display_image/main/: CMakeLists.txt  display_image_main.c  idf_component.yml  image.rgb565
apps/display_image/tools/: make_test_pattern.py
apps/hello_world/: README.md
apps/play_audio/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
apps/play_audio/main/: CMakeLists.txt  idf_component.yml  play_audio_main.c
apps/play_audio/tools/: fetch_audio.sh
apps/rest_api/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
apps/rest_api/main/: CMakeLists.txt  audio.c  audio.h  display.c  display.h  font.c  font.h  idf_component.yml  net.c  net.h  rest_api_main.c
apps/rest_api/tools/: gen_credentials.py  gen_font.py  png_to_rgb565.py
docs/: board.md  toolchain.md
